--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <h2> Our Classes </h2>
      <ul> 
         <li>
-            <a href="https://www.google.com"> Intro to Python </a>
+            <a href="introToPython.html" class="button"> Intro to Python </a>
             <img src="images/test.img" alt="Test Image" width="250">
         </li>
      </ul>
@@ -35,10 +35,8 @@
 
      <h2> Contact Us </h2>
 
-     <p> Fill out <a href="https://www.google.com"> this form</a> if you're interested in joining!</p>
+     <p> Fill out <a href="https://www.google.com" class="button"> this form</a> if you're interested in joining!</p>
 
 </body>
 
 </html>
-
-<!-- Testing this -->
