--- a/introToPython.html
+++ b/introToPython.html
@@ -15,6 +15,15 @@
             <li> Week 1 - Intro to Variables + Print </li>
             <li> Week 2 - Math + Input </li>
             <li> Week 3 - Conditionals </li>
+            <li> Week 4 - Strings </li>
+            <li> Week 5 - Loops </li>
+            <li> Week 6 - Lists </li>
+            <li> Week 7 - Functions </li>
+            <li> Week 8 - Dictionaries </li>
+            <li> Week 9 - Error Handling </li>
+            <li> Week 10 - Turtle Graphics </li>
+            <li> Week 11 - Building a Game </li>
+            <li> Week 12 - Final Project </li>
         </ul>
     </div>
     </body>
