--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 
     </div>
 
+    <nav class="navbar">
+        <ul> 
+            <li> <a href="index.html" > Home </a></li>
+            <li> <a href="classes.html" > Classes </a></li>
+            <li> <a href="about.html" > About </a></li>
+            <li> <a href="join.html" > Join Us </a></li>
+            <li> <a href="tutor.html" > Become a Tutor </a></li>
+            <li> <a href="contact.html" > Contact Us </a></li>
+        </ul>
+    </nav>
+
     <h2> About the program </h2>
 
     <p> Hacka</p>
