--- a/introToPython.html
+++ b/introToPython.html
@@ -7,6 +7,19 @@
 
     <body> 
         <div class = "container"> 
+
+        <nav class="navbar">
+            <ul> 
+                <li> <a href="index.html" > Home </a></li>
+                <li> <a href="classes.html" > Classes </a></li>
+                <li> <a href="about.html" > About </a></li>
+                <li> <a href="join.html" > Join Us </a></li>
+                <li> <a href="tutor.html" > Become a Tutor </a></li>
+                <li> <a href="contact.html" > Contact Us </a></li>
+            </ul>
+        </nav>
+        
+
         <h1> Python Curriculum </h1> 
 
         <h2> Here's our 6-12 week program for Python! </h2>
