--- a/index.html
+++ b/index.html
@@ -11,42 +11,40 @@
 
     <div class="info-box"> 
     <h1> Welcome to Hackademy Tutoring! </h1>
-    <p> Hackademy Tutoring’s mission is to provide free tutoring in coding and STEM to enable the minds of young children. 
-        We are volunteer oriented, meaning that our tutors are truly passionate in their fields and will do whatever it takes to 
-        ensure that your child gets the quality education that they deserve. </p> 
-        <!-- CHANGE LATER  -->
-
+    <p> Empowering young minds through code </p> 
     </div>
 
-    <nav class="navbar">
-        <ul> 
-            <li> <a href="index.html" > Home </a></li>
-            <li> <a href="classes.html" > Classes </a></li>
-            <li> <a href="about.html" > About </a></li>
-            <li> <a href="join.html" > Join Us </a></li>
-            <li> <a href="tutor.html" > Become a Tutor </a></li>
-            <li> <a href="contact.html" > Contact Us </a></li>
+    <div class="navbar-container">
+        <nav class="navbar">
+            <ul> 
+                <li> <a href="index.html" > Home </a></li>
+                <li> <a href="classes.html" > Classes </a></li>
+                <li> <a href="about.html" > About </a></li>
+                <li> <a href="join.html" > Join Us </a></li>
+                <li> <a href="tutor.html" > Become a Tutor </a></li>
+                <li> <a href="contact.html" > Contact Us </a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="container">
+        <h2> What We Offer </h2>
+        <ul>
+            <li> Free small group coding classes for middle schoolers </li> 
+            <li> Beginner friendly Python curriculum </li>
+            <li> Led by high school volunteers passionate about STEM </li>
         </ul>
-    </nav>
 
-    <h2> About the program </h2>
+        <h2> How to get started </h2>
+        <p> <strong>Parents:</strong> Click "Join Us" in the navigation bar to sign up your child</p>
+        <p> <strong>Students:</strong> Click "Join Us" in the navigation bar to sign up</p>
+        <p> <strong>Tutors:</strong> Click "Become a Tutor" in the navigation bar to sign up as a tutor</p>
 
-    <p> Hacka</p>
-     <!-- CHANGE LATER  -->
-
-     <h2> Our Classes </h2>
-     <ul> 
-        <li>
-            <a href="introToPython.html" class="button"> Intro to Python </a>
-            <img src="images/test.img" alt="Test Image" width="250">
-        </li>
-     </ul>
-
-     <h2> Mentors/Tutors</h2>
-
-     <h2> Contact Us </h2>
-
-     <p> Fill out <a href="https://www.google.com" class="button"> this form</a> if you're interested in joining!</p>
+        <h2> Upcoming Sessions </h2>
+        <ul>
+            <li> Python Basic: N/A </lI>
+        </ul>
+    </div>
 
 </body>
 
