Added google embedding

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li> Python Basic: N/A </lI>
         </ul>
     </div>
+    <img src="images/example.jpg" alt="horses" width="250">
 
 </body>
 
