--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <body> 
 
-    <div class="info-box"> 
-    <h1> Welcome to Hackademy Tutoring! </h1>
-    <p> Empowering young minds through code </p> 
+    <div class="info-box">
+        <img src = "images/Hackademy_Logo-1.png" alt = "Hackademy Logo" class = "logo">
+        <h1> Welcome to Hackademy Tutoring! </h1>
+        <p> Empowering young minds through code </p> 
     </div>
 
     <div class="navbar-container">
