Changed colors and added footer

--- a/about.html
+++ b/about.html
@@ -22,15 +22,39 @@
         </nav>
     </div>
 
-    <div class="container">
-        <h1> About Hackademy</h1>
+    <div class="container about">
+      <img src="images/Hackademy_Logo-1.png" alt="Hackademy Logo" class="logo">
+      <h1>About Hackademy</h1>
 
-        <p> <strong>Hackademy Tutoring’s</strong> mission is to provide free tutoring 
-            in coding and STEM to enable the minds of young children. We are volunteer oriented, 
-            meaning that our tutors are truly passionate in their fields and will do whatever it 
-            takes to ensure that your child gets the quality education that they deserve.  </p>
+      <p><strong>Hackademy</strong> is a student-led tutoring program offering free coding and STEM education to young learners.</p>
+
+      <p>Founded by high school students, our goal is to spark curiosity, build problem-solving skills, and make tech education more accessible for everyone—no prior experience needed.</p>
+
+      <p>We focus on hands-on, beginner-friendly classes where students learn by building real projects. We offer both online and in-person options to meet students where they are.</p>
+
+      <p>Our tutors are passionate, trained volunteers dedicated to helping others grow. Hackademy also collaborates with schools, libraries, and local organizations to expand its reach.</p>
+
+      <p>Interested in working with us? <a href="contact.html">Get in touch</a>—we’d love to connect!</p>
+
+      <hr>
+      <h2 style="text-align:center;">Why We Do It</h2>
+      <p>We believe every student deserves the opportunity to explore technology. By removing cost barriers and offering supportive mentorship, Hackademy creates an environment where creativity and confidence thrive.</p>
     </div>
 
+    <footer class="site-footer"> 
+        <div class="footer-left"> 
+            <h3> Contact </h3>
+            <p> Email: <a href="mailto:rylanlee1968@gmail.com">rylanlee1968@gmail.com</a></p> 
+            <p> Location: Fort Lee, NJ </p>
+        </div>
+
+        <div class="footer-right">
+            <h3> Connect with us </h3>
+            <a href="https://instagram.com" target="_blank">Instagram</a> <br> <br>
+            <a href="https://tiktok.com" target="_blank">TikTok</a> <br> <br>
+            <a href="https://linkedIn.com" target="_blank">LinkedIn</a> 
+        </div>
+    </footer>
 </body>
 
 </html>
