--- a/Classes.html
+++ b/Classes.html
@@ -32,6 +32,20 @@
 
     </div>
 
+    <footer class="site-footer"> 
+        <div class="footer-left"> 
+            <h3> Contact </h3>
+            <p> Email: <a href="mailto:rylanlee1968@gmail.com">rylanlee1968@gmail.com</a></p> 
+            <p> Location: Fort Lee, NJ </p>
+        </div>
+
+        <div class="footer-right">
+            <h3> Connect with us </h3>
+            <a href="https://instagram.com" target="_blank">Instagram</a> <br> <br>
+            <a href="https://tiktok.com" target="_blank">TikTok</a> <br> <br>
+            <a href="https://linkedIn.com" target="_blank">LinkedIn</a> 
+        </div>
+    </footer>
 </body>
 
 </html>
