--- a/contact.html
+++ b/contact.html
@@ -29,32 +29,46 @@
         
         <form id="contact-form"> 
             <label for="name">Name:</label><br>
-            <input type = "text" id="name" name="user_name" requried> <br><br>
+            <input type = "text" id="name" name="user_name" required> <br><br>
 
             <label for="email">Email:</label> <br>
-            <input type = "email" id="email" name="user_email" requried> <br><br>
+            <input type = "email" id="email" name="user_email" required> <br><br>
 
             <label for="message">Message:</label> <br>
-            <textarea  id="message" name="user_message" rows = "10" requried></textarea><br><br>
+            <textarea  id="message" name="user_message" rows = "10" required></textarea><br><br>
 
             <button type="submit">Send</button>
         </form>
     </div>
 
     <script>
+        // Make sure your EmailJS user ID, service ID, and template ID are correct and match your EmailJS dashboard.
         (function() {
-            emailjs.init("_6_HWJj0UciLA03Jm")
-        });
+            emailjs.init("6_HWJj0UciLA03Jm");
+        })();
 
         document.getElementById('contact-form').addEventListener('submit', function(event) {
             event.preventDefault();
-            emailjs.sendForm ('service_o7r062c','template_s4524q8',this)
+            emailjs.sendForm('service_o7r062c', 'template_s4524q8', this)
             .then(() => alert("Message sent successfully!"))
             .catch(() => alert("Failed to send message, please try again."))
-
         }) 
     </script>
 
+    <footer class="site-footer"> 
+        <div class="footer-left"> 
+            <h3> Contact </h3>
+            <p> Email: <a href="mailto:rylanlee1968@gmail.com">rylanlee1968@gmail.com</a></p> 
+            <p> Location: Fort Lee, NJ </p>
+        </div>
+
+        <div class="footer-right">
+            <h3> Connect with us </h3>
+            <a href="https://instagram.com" target="_blank">Instagram</a> <br> <br>
+            <a href="https://tiktok.com" target="_blank">TikTok</a> <br> <br>
+            <a href="https://linkedIn.com" target="_blank">LinkedIn</a> 
+        </div>
+    </footer>
 </body>
 
 </html>
