--- a/about.html
+++ b/about.html
@@ -28,13 +28,13 @@
 
       <p><strong>Hackademy</strong> is a student-led tutoring program offering free coding and STEM education to young learners.</p>
 
-      <p>Founded by high school students, our goal is to spark curiosity, build problem-solving skills, and make tech education more accessible for everyone—no prior experience needed.</p>
+      <p>Founded by high school students, our goal is to spark curiosity, build problem-solving skills, and make tech education more accessible for everyone, no prior experience needed.</p>
 
       <p>We focus on hands-on, beginner-friendly classes where students learn by building real projects. We offer both online and in-person options to meet students where they are.</p>
 
       <p>Our tutors are passionate, trained volunteers dedicated to helping others grow. Hackademy also collaborates with schools, libraries, and local organizations to expand its reach.</p>
 
-      <p>Interested in working with us? <a href="contact.html">Get in touch</a>—we’d love to connect!</p>
+      <p>Interested in working with us? <a href="contact.html">Get in touch</a> we’d love to connect!</p>
 
       <hr>
       <h2 style="text-align:center;">Why We Do It</h2>
