--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <script>
         // Make sure your EmailJS user ID, service ID, and template ID are correct and match your EmailJS dashboard.
         (function() {
-            emailjs.init("6_HWJj0UciLA03Jm");
+            emailjs.init("_6_HWJj0UciLA03Jm");
         })();
 
         document.getElementById('contact-form').addEventListener('submit', function(event) {
