--- a/Classes.html
+++ b/Classes.html
@@ -26,10 +26,10 @@
         <h1> Our Class Offerings </h1>
     
         <h2> Available Classes </h2>
-        <ul>
-            <li><a href="introToPython.html" class="button"> Intro to Python </a> - basics of coding and problem solving</li>
-        </ul>
-
+        <div class="class-item">
+            <a href="introToPython.html" class="button"> Intro to Python </a>
+            <span class="class-description"> - basics of coding and problem solving</span>
+        </div>
     </div>
 
     <footer class="site-footer"> 
