--- a/index.html
+++ b/index.html
@@ -42,11 +42,19 @@
         <p> <strong>Tutors:</strong> Click "Become a Tutor" in the navigation bar to sign up as a tutor</p>
 
         <h2> Upcoming Sessions </h2>
-        <ul>
-            <li> Python Basic: N/A </lI>
-        </ul>
+        <div class="session-card">
+            <div class="session-header">
+                <h3>Python Basic</h3>
+                <span class="session-date">January 15, 2024</span>
+            </div>
+            <p class="session-description">Learn the fundamentals of Python programming in this beginner-friendly session. Perfect for students with no prior coding experience.</p>
+            <div class="session-details">
+                <span class="session-time">⏰ 3:00 PM - 4:30 PM</span>
+                <span class="session-location">📍 Fort Lee Library</span>
+            </div>
+            <a href="join.html" class="button">Sign Up Now</a>
+        </div>
     </div>
-    <!-- <img src="images/example.jpg" alt="horses" width="250"> -->
 
     <footer class = "site-footer"> 
         <div class = "footer-left"> 
